--- a/README
+++ b/README
@@ -1,2 +1,2 @@
-message for github: 
-Modifying a lexer for homework.  Nothing interesting here.
+Project for school.  
+Working Lexer for X language.  Modified for floats.
